--- a/package.json
+++ b/package.json
@@ -2,20 +2,50 @@
     "name": "myapp",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
-        "build-all": "node ./node_modules/neo.mjs/buildScripts/buildAll.js -n",
-        "build-all-questions": "node ./buildScripts/buildAll.js",
-        "build-my-apps": "node ./node_modules/neo.mjs/buildScripts/webpack/buildMyApps.js",
-        "build-themes": "node ./node_modules/neo.mjs/buildScripts/buildThemes.js",
-        "build-threads": "node ./node_modules/neo.mjs/buildScripts/webpack/buildThreads.js",
-        "copy-examples": "node ./buildScripts/copyExamples.js",
-        "create-app": "node ./node_modules/neo.mjs/buildScripts/createApp.js",
-        "generate-docs-json": "node ./node_modules/neo.mjs/buildScripts/docs/jsdocx.js",
-        "server-start": "webpack serve -c ./node_modules/neo.mjs/buildScripts/webpack/webpack.server.config.js --open",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "add-config": "node ./node_modules/neo.mjs/buildScripts/addConfig.mjs",
+        "build-all": "node ./node_modules/neo.mjs/buildScripts/buildAll.mjs -n",
+        "build-all-questions": "node ./node_modules/neo.mjs/buildScripts/buildAll.mjs",
+        "build-themes": "node ./node_modules/neo.mjs/buildScripts/buildThemes.mjs",
+        "build-threads": "node ./node_modules/neo.mjs/buildScripts/webpack/buildThreads.mjs",
+        "copy-examples": "node ./buildScripts/copyExamples.mjs",
+        "create-app": "node ./node_modules/neo.mjs/buildScripts/createApp.mjs",
+        "create-app-minimal": "node ./node_modules/neo.mjs/buildScripts/createAppMinimal.mjs",
+        "create-class": "node ./node_modules/neo.mjs/buildScripts/createClass.mjs",
+        "create-component": "node ./node_modules/neo.mjs/buildScripts/createComponent.mjs",
+        "generate-docs-json": "node ./node_modules/neo.mjs/buildScripts/docs/jsdocx.mjs",
+        "inject-package-version": "node ./buildScripts/injectPackageVersion.mjs",
+        "server-start": "webpack serve -c ./buildScripts/webpack/webpack.server.config.mjs --open",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch-themes": "node ./node_modules/neo.mjs/buildScripts/watchThemes.mjs"
     },
     "dependencies": {
-        "fs-extra": "^10.0.0",
-        "neo.mjs": "^3.0.0"
+        "neo.mjs": "^6.36.0"
+    },
+    "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.2",
+        "autoprefixer": "^10.4.19",
+        "chalk": "^5.3.0",
+        "clean-webpack-plugin": "^4.0.0",
+        "commander": "^12.1.0",
+        "cssnano": "^7.0.3",
+        "envinfo": "^7.13.0",
+        "fs-extra": "^11.2.0",
+        "highlightjs-line-numbers.js": "^2.8.0",
+        "inquirer": "^9.2.23",
+        "marked": "^13.0.0",
+        "monaco-editor": "^0.49.0",
+        "neo-jsdoc": "1.0.1",
+        "neo-jsdoc-x": "1.0.5",
+        "postcss": "^8.4.38",
+        "sass": "^1.77.6",
+        "siesta-lite": "5.5.2",
+        "url": "^0.11.3",
+        "webpack": "^5.92.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.0.4",
+        "webpack-hook-plugin": "^1.0.7",
+        "webpack-node-externals": "^3.0.0"
     }
 }
