--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "add-config": "node ./node_modules/neo.mjs/buildScripts/addConfig.mjs",
         "build-all": "node ./node_modules/neo.mjs/buildScripts/buildAll.mjs -n",
         "build-all-questions": "node ./node_modules/neo.mjs/buildScripts/buildAll.mjs",
+        "build-es-modules": "node ./node_modules/neo.mjs/buildScripts/buildESModules.mjs",
         "build-themes": "node ./node_modules/neo.mjs/buildScripts/buildThemes.mjs",
         "build-threads": "node ./node_modules/neo.mjs/buildScripts/webpack/buildThreads.mjs",
         "copy-examples": "node ./buildScripts/copyExamples.mjs",
@@ -15,36 +16,38 @@
         "create-class": "node ./node_modules/neo.mjs/buildScripts/createClass.mjs",
         "create-component": "node ./node_modules/neo.mjs/buildScripts/createComponent.mjs",
         "generate-docs-json": "node ./node_modules/neo.mjs/buildScripts/docs/jsdocx.mjs",
-        "inject-package-version": "node ./buildScripts/injectPackageVersion.mjs",
+        "inject-package-version": "node ./node_modules/neo.mjs/buildScripts/injectPackageVersion.mjs",
         "server-start": "webpack serve -c ./buildScripts/webpack/webpack.server.config.mjs --open",
         "test": "echo \"Error: no test specified\" && exit 1",
         "watch-themes": "node ./node_modules/neo.mjs/buildScripts/watchThemes.mjs"
     },
     "dependencies": {
-        "neo.mjs": "^6.36.0"
+        "neo.mjs": "^9.11.1"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.2",
-        "autoprefixer": "^10.4.19",
-        "chalk": "^5.3.0",
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "autoprefixer": "^10.4.21",
+        "chalk": "^5.4.1",
         "clean-webpack-plugin": "^4.0.0",
-        "commander": "^12.1.0",
-        "cssnano": "^7.0.3",
-        "envinfo": "^7.13.0",
-        "fs-extra": "^11.2.0",
-        "highlightjs-line-numbers.js": "^2.8.0",
-        "inquirer": "^9.2.23",
-        "marked": "^13.0.0",
-        "monaco-editor": "^0.49.0",
+        "commander": "^14.0.0",
+        "cssnano": "^7.0.7",
+        "envinfo": "^7.14.0",
+        "fs-extra": "^11.3.0",
+        "highlightjs-line-numbers.js": "^2.9.0",
+        "html-minifier-terser": "^7.2.0",
+        "inquirer": "^12.6.3",
+        "marked": "^15.0.12",
+        "monaco-editor": "0.50.0",
         "neo-jsdoc": "1.0.1",
         "neo-jsdoc-x": "1.0.5",
-        "postcss": "^8.4.38",
-        "sass": "^1.77.6",
+        "postcss": "^8.5.4",
+        "sass": "^1.89.1",
         "siesta-lite": "5.5.2",
-        "url": "^0.11.3",
-        "webpack": "^5.92.1",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.4",
+        "terser": "^5.41.0",
+        "url": "^0.11.4",
+        "webpack": "^5.99.9",
+        "webpack-cli": "^6.0.1",
+        "webpack-dev-server": "^5.2.2",
         "webpack-hook-plugin": "^1.0.7",
         "webpack-node-externals": "^3.0.0"
     }
